--- a/src/assets/scss/main/_tokyo.scss
+++ b/src/assets/scss/main/_tokyo.scss
@@ -1282,6 +1282,7 @@ ul.react-tabs__tab-list {
 }
 .tokyo_tm_modalbox_news .description_wrap .image img {
   min-width: 100%;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.12);
 }
 .tokyo_tm_modalbox_news .description_wrap .image .main {
   position: absolute;
@@ -2007,13 +2008,39 @@ input:checked + .slider {
 
   font-size: 15px;
   line-height: 15px;
-  padding: 19px 40px;
-  border: none;
+  padding: 10px 10px;
+  border: 0;
+  border-radius: 50%;
   cursor: pointer;
   &:focus {
     outline: none;
   }
 }
+.btn-image span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+.btn-image span:after {
+  content: "View";
+  position: absolute;
+  opacity: 0;
+  top: 2px;
+  right: -20px;
+  transition: 0.5s;
+}
 .btn-image:hover {
-  letter-spacing: 2px;
+  border-radius: 10px !important;
+}
+.btn-image:hover span {
+  padding-right: 35px;
+}
+.btn-image:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+.btn-image .svg {
+  width: 15px !important;
+  height: auto !important;
 }
